In progress: Layout Menu
-> Upload picture fertigstellen
-> Comments sortieren + timestamp
-> Kommentarfeld invisibile wenn ausgeloggt
->

Done:
Gradle settings + Manifest
include binding
API
DATABASE
NAV GRAPH
FIREBASE
DIALOG

--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
         android:padding="16dp"
+        android:backgroundTint="@color/cardBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -26,6 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:text="Username"
+                style="@style/TitleText"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,6 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
                 android:text="Comment Text"
+                style="@style/secondText"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/commentNameTV" />
