--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -30,6 +30,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="4dp"
             android:text="PLAY NOW"
+            style="@style/mainButton"
             app:layout_constraintEnd_toStartOf="@+id/detailShareBTN"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detailThumbIV" />
@@ -41,6 +42,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="TextView"
+            style="@style/TitleText"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detailPlayNowBTN" />
 
@@ -54,6 +56,7 @@
             android:maxLines="3"
             android:ellipsize="end"
             app:animation_duration="750"
+            style="@style/secondText"
             app:layout_constraintStart_toStartOf="@+id/detailDecsTTV"
             app:layout_constraintTop_toBottomOf="@+id/detailDecsTTV" />
 
@@ -62,6 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="read more"
+            style="@style/secondText"
             app:layout_constraintEnd_toEndOf="@+id/detailDescTV"
             app:layout_constraintTop_toBottomOf="@+id/detailDescTV" />
 
@@ -70,7 +74,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="TextView"
+            android:text="Description"
+            style="@style/TitleText"
             app:layout_constraintStart_toStartOf="@+id/detailTitleTV"
             app:layout_constraintTop_toBottomOf="@id/detailTitleTV" />
 
@@ -79,7 +84,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="TextView"
+            android:text="Specs"
+            style="@style/TitleText"
             app:layout_constraintStart_toStartOf="@+id/detailDescTV"
             app:layout_constraintTop_toBottomOf="@+id/detailDescTV" />
 
@@ -89,6 +95,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="OS:"
+            style="@style/TitleText"
             app:layout_constraintStart_toStartOf="@+id/detailReqTTV"
             app:layout_constraintTop_toBottomOf="@+id/detailReqTTV" />
 
@@ -98,6 +105,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="TextView"
+            style="@style/secondText"
             app:layout_constraintBottom_toBottomOf="@+id/detailOsTTV"
             app:layout_constraintStart_toEndOf="@+id/detailOsTTV"
             app:layout_constraintTop_toTopOf="@+id/detailOsTTV" />
@@ -108,6 +116,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="CPU:"
+            style="@style/TitleText"
             app:layout_constraintStart_toStartOf="@+id/detailOsTTV"
             app:layout_constraintTop_toBottomOf="@+id/detailOsTTV" />
 
@@ -117,6 +126,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="TextView"
+            style="@style/secondText"
             app:layout_constraintBottom_toBottomOf="@+id/detailCpuTTV"
             app:layout_constraintStart_toEndOf="@+id/detailCpuTTV"
             app:layout_constraintTop_toTopOf="@+id/detailCpuTTV" />
@@ -127,6 +137,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="RAM:"
+            style="@style/TitleText"
             app:layout_constraintStart_toStartOf="@+id/detailCpuTTV"
             app:layout_constraintTop_toBottomOf="@+id/detailCpuTTV" />
 
@@ -136,6 +147,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="TextView"
+            style="@style/secondText"
             app:layout_constraintBottom_toBottomOf="@+id/detailRamTTV"
             app:layout_constraintStart_toEndOf="@+id/detailRamTTV"
             app:layout_constraintTop_toTopOf="@+id/detailRamTTV" />
@@ -146,6 +158,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="GPU:"
+            style="@style/TitleText"
             app:layout_constraintStart_toStartOf="@+id/detailRamTTV"
             app:layout_constraintTop_toBottomOf="@+id/detailRamTTV" />
 
@@ -155,6 +168,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="TextView"
+            style="@style/secondText"
             app:layout_constraintBottom_toBottomOf="@+id/detailGpuTTV"
             app:layout_constraintStart_toEndOf="@+id/detailGpuTTV"
             app:layout_constraintTop_toTopOf="@+id/detailGpuTTV" />
@@ -165,6 +179,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Storage:"
+            style="@style/TitleText"
             app:layout_constraintStart_toStartOf="@+id/detailGpuTTV"
             app:layout_constraintTop_toBottomOf="@+id/detailGpuTTV" />
 
@@ -174,6 +189,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="TextView"
+            style="@style/secondText"
             app:layout_constraintBottom_toBottomOf="@+id/detailStorageTTV"
             app:layout_constraintStart_toEndOf="@+id/detailStorageTTV"
             app:layout_constraintTop_toTopOf="@+id/detailStorageTTV" />
@@ -184,6 +200,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:text="Screenshots"
+            style="@style/TitleText"
             app:layout_constraintStart_toStartOf="@+id/detailStorageTTV"
             app:layout_constraintTop_toBottomOf="@+id/detailStorageTTV" />
 
@@ -229,7 +246,7 @@
             app:layout_constraintStart_toEndOf="@+id/detailScreen3IV"
             app:layout_constraintTop_toTopOf="@+id/detailScreen3IV" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/detailShareBTN"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -237,6 +254,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:text="Share"
+            style="@style/secondButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/detailPlayNowBTN"
             app:layout_constraintTop_toBottomOf="@+id/detailThumbIV" />
@@ -247,6 +265,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:text="Comments"
+            style="@style/TitleText"
             app:layout_constraintStart_toStartOf="@+id/detailScreenshotsTTV"
             app:layout_constraintTop_toBottomOf="@+id/detailScreen3IV" />
 
@@ -277,12 +296,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/commentRV" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/addCommentBTN"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
             android:text="SEND"
+            style="@style/mainButton"
             app:layout_constraintBottom_toBottomOf="@+id/commentET"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/commentET" />
