--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/homeSV"
+        app:layout_constraintTop_toBottomOf="@+id/homeFilterTV"
         tools:context=".MainActivity">
 
 
@@ -31,7 +31,7 @@
             tools:listitem="@layout/game_list_item" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-    <SearchView
+    <androidx.appcompat.widget.SearchView
         android:id="@+id/homeSV"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -45,7 +45,7 @@
         android:id="@+id/homeFilterTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="16dp"
         android:text="Filter by:"
 
         android:visibility="gone"
@@ -56,6 +56,8 @@
         android:id="@+id/homeFilterBTN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:background="@color/transparent"
         android:src="@drawable/baseline_filter_alt_24"
         app:layout_constraintBottom_toBottomOf="@+id/homeSV"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,8 +80,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
+        app:tint="@color/mainButtonColor"
+        app:elevation="0dp"
         android:clickable="true"
-        android:backgroundTint="@color/common_google_signin_btn_text_light_default"
+        android:scaleType="fitXY"
+        android:backgroundTint="@color/blackAlpha"
         android:src="@drawable/scroll_up"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
