--- a/app/src/main/res/layout/reset_pw.xml
+++ b/app/src/main/res/layout/reset_pw.xml
@@ -23,12 +23,13 @@
                 android:layout_height="wrap_content"
                 android:padding="24dp">
 
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/resetBTN"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="Reset password"
+                    style="@style/mainButton"
                     app:layout_constraintEnd_toEndOf="@+id/messageET"
                     app:layout_constraintStart_toStartOf="@+id/messageET"
                     app:layout_constraintTop_toBottomOf="@+id/messageET" />
